index.css
*{
    margin: 0;
    box-sizing: border-box;
}

/*GENERAL PAGE LAYOUT*/
#page-wrapper{
    width:80vw;
    margin: 0 auto;
    text-align: left;
}


#container{
    display: flex;
    flex-direction: row;
    height: 100vh;
    width: 100%;
    border-top: 4px solid #395c6b;
    border-bottom: 4px solid #395c6b;
}

header,footer{
    font-family: "Gentium Book Plus", serif;
    background-color: #fdbe7b;
    color: white;
    text-align: left;
}

header h1{
    padding-left: 2%;
}

header p{
    padding-left: 5%;
}

footer{
    padding: 2% 2%;
}

nav{
    background-color: #c0d1e3;
    width: 30%;
}

nav ul{
    list-style: none;
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    padding-left: 0;
    text-align: center;
    text-decoration: none;
}

nav a{
    display: block;
    text-decoration: none;
    color: floralwhite;
    width: 100%;
    font-size: calc(2px + 2vw);
    border: 4px solid #395c6b;
    padding: 5% 10%;
}

main{
    background-color: #ffefd3;
    height: 100vh;
    width: 70%;
}

/******************************************/

/*index.html elements*/
#headshot{
    display: inline;
    max-width: 30%;
    padding: 5% 5%;
    text-align: left;
}

#intro{
    display: flex;
    text-align: left;
    margin: 2%;
    padding-top: 0;
    padding-left: 5%;
}

.contact{
    padding-left: 5%;
}
/**************************************/

/*edu.html elements*/
.schools{
    padding-top: 2%;
    padding-left: 5%;
}

.schools h3{
    padding: 2% 2%;
}

.schools h4{
    padding-left: 5%;
}

.schools p{
    padding-right: 2%;
}
/************************************/


/*exp.html elements*/
.work h3{
    padding: 2% 2%;
}

.work p{
    padding-top: 5%;
    padding-left: 10%;
}
/***********************************/

/*leadership-exp.html elements*/
.leadership h3{
    padding: 2% 2%;
}

.leadership p{
    margin: 1%;
    padding-top: 2%;
    padding-left: 5%;
}
/*********************************/

/*certs.html elements*/
.certifications{
    padding-top: 5%;
    padding-left: 10%;
}

.certifications img{
    max-width: 20vw;
}
/*******************************/

/*refs.html elements*/
.references{
    padding-top: 2%;
    padding-left: 5%;
}

.references h3{
    padding: 2% 1%;
}

.references ul{
    padding-left: 4%;
}
.references p{
    margin: 2%;
}
/******************************/

/*proj.html elements*/
.projects{
    padding: 2% 2%;
}

#calculator{
    align-items: center;
}
/*****************************/

/*Css classes for Google Font Gentium Book Plus*/
.gentium-book-plus-regular {
    font-family: "Gentium Book Plus", serif;
    font-weight: 400;
    font-style: normal;
}

.gentium-book-plus-bold {
    font-family: "Gentium Book Plus", serif;
    font-weight: 700;
    font-style: normal;
}

.gentium-book-plus-regular-italic {
    font-family: "Gentium Book Plus", serif;
    font-weight: 400;
    font-style: italic;
}

.gentium-book-plus-bold-italic {
    font-family: "Gentium Book Plus", serif;
    font-weight: 700;
    font-style: italic;
}
/**********************************************/


/*Bellow this line is my mobile design*/

@media screen and (max-width:1000px){
    #container{
        flex-direction: column;
        text-align: center;
        height: 100vh;
    }

    header,footer{
        text-align: center;
    }

    nav{
        width: 100%;
    }

    nav ul{
        flex-direction: row;
        justify-content: space-evenly;
    }

    nav a{
        display: flex;
        justify-content: space-evenly;

    }

    main{
        height:100vh;
        width: 100%;
    }

}

